Shops Items popup implemented

--- a/app/src/main/res/layout/shops_popup.xml
+++ b/app/src/main/res/layout/shops_popup.xml
@@ -85,318 +85,21 @@
                     android:textStyle="bold" />
 
                 <LinearLayout
-                    android:id="@+id/verga"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_marginTop="@dimen/margin_5dp"
+                    android:layout_marginBottom="@dimen/margin_20dp">
 
-                    <!--
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginTop="@dimen/margin_5dp"
-                        android:layout_marginBottom="@dimen/margin_5dp"
-                        android:text="@string/rate_it_sentence"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="@dimen/rate_popup_subtitles_size"
-                        android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:layout_marginTop="@dimen/margin_5dp"
-                        android:layout_marginBottom="@dimen/margin_10dp"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal|center_vertical"
-                            android:layout_marginBottom="@dimen/margin_20dp"
-                            android:orientation="horizontal">
-
-                            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                android:id="@+id/card_view11"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="5dp"
-                                android:layout_marginEnd="5dp"
-                                android:layout_marginBottom="5dp"
-                                android:tag="1"
-                                card_view:cardBackgroundColor="@color/colorGrayCardBackground"
-                                card_view:cardCornerRadius="4dp">
-
-                                <ImageButton
-                                    android:id="@+id/star1"
-                                    android:layout_width="@dimen/star_size"
-                                    android:layout_height="@dimen/star_size"
-                                    android:layout_marginBottom="5dp"
-                                    android:backgroundTint="@color/colorGrayCardBackground"
-                                    android:contentDescription="@string/imageview_adapter_text"
-                                    android:orientation="horizontal"
-                                    android:src="@drawable/ic_empty_star"
-                                    android:tag="1" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom|center_horizontal"
-                                    android:layout_marginBottom="@dimen/margin_5dp"
-                                    android:text="@string/bad_review"
-                                    android:textColor="@color/colorBlack"
-                                    android:textSize="@dimen/emoji_text_size"
-                                    android:textStyle="bold" />
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                android:id="@+id/card_view12"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="5dp"
-                                android:layout_marginEnd="5dp"
-                                android:layout_marginBottom="5dp"
-                                android:tag="2"
-                                card_view:cardBackgroundColor="@color/colorGrayCardBackground"
-                                card_view:cardCornerRadius="4dp">
-
-                                <ImageButton
-                                    android:id="@+id/star2"
-                                    android:layout_width="@dimen/star_size"
-                                    android:layout_height="@dimen/star_size"
-                                    android:layout_marginBottom="5dp"
-                                    android:backgroundTint="@color/colorGrayCardBackground"
-                                    android:contentDescription="@string/imageview_adapter_text"
-                                    android:orientation="horizontal"
-                                    android:src="@drawable/ic_empty_star"
-                                    android:tag="2" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom|center_horizontal"
-                                    android:layout_marginBottom="@dimen/margin_5dp"
-                                    android:text="@string/ok_review"
-                                    android:textColor="@color/colorBlack"
-                                    android:textSize="@dimen/emoji_text_size"
-                                    android:textStyle="bold" />
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                android:id="@+id/card_view13"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="5dp"
-                                android:layout_marginEnd="5dp"
-                                android:layout_marginBottom="5dp"
-                                android:tag="3"
-                                card_view:cardBackgroundColor="@color/colorGrayCardBackground"
-                                card_view:cardCornerRadius="4dp">
-
-                                <ImageButton
-                                    android:id="@+id/star3"
-                                    android:layout_width="@dimen/star_size"
-                                    android:layout_height="@dimen/star_size"
-                                    android:layout_marginBottom="5dp"
-                                    android:backgroundTint="@color/colorGrayCardBackground"
-                                    android:contentDescription="@string/imageview_adapter_text"
-                                    android:orientation="horizontal"
-                                    android:src="@drawable/ic_empty_star"
-                                    android:tag="3" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom|center_horizontal"
-                                    android:layout_marginBottom="@dimen/margin_5dp"
-                                    android:text="@string/good_review"
-                                    android:textColor="@color/colorBlack"
-                                    android:textSize="@dimen/emoji_text_size"
-                                    android:textStyle="bold" />
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                android:id="@+id/card_view14"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="5dp"
-                                android:layout_marginEnd="5dp"
-                                android:layout_marginBottom="5dp"
-                                android:backgroundTint="@color/colorGrayCardBackground"
-                                android:tag="4"
-                                card_view:cardBackgroundColor="@color/colorGrayCardBackground"
-                                card_view:cardCornerRadius="4dp">
-
-                                <ImageButton
-                                    android:id="@+id/star4"
-                                    android:layout_width="@dimen/star_size"
-                                    android:layout_height="@dimen/star_size"
-                                    android:layout_marginBottom="5dp"
-                                    android:backgroundTint="@color/colorGrayCardBackground"
-                                    android:contentDescription="@string/imageview_adapter_text"
-                                    android:orientation="horizontal"
-                                    android:src="@drawable/ic_empty_star"
-                                    android:tag="4" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom|center_horizontal"
-                                    android:layout_marginBottom="@dimen/margin_5dp"
-                                    android:text="@string/great_review"
-                                    android:textColor="@color/colorBlack"
-                                    android:textSize="@dimen/emoji_text_size"
-                                    android:textStyle="bold" />
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                android:id="@+id/card_view15"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginStart="5dp"
-                                android:layout_marginEnd="5dp"
-                                android:layout_marginBottom="5dp"
-                                android:backgroundTint="@color/colorGrayCardBackground"
-                                android:tag="5"
-                                card_view:cardBackgroundColor="@color/colorGrayCardBackground"
-                                card_view:cardCornerRadius="4dp">
-
-                                <ImageButton
-                                    android:id="@+id/star5"
-                                    android:layout_width="@dimen/star_size"
-                                    android:layout_height="@dimen/star_size"
-                                    android:layout_marginBottom="5dp"
-                                    android:backgroundTint="@color/colorGrayCardBackground"
-                                    android:contentDescription="@string/imageview_adapter_text"
-                                    android:orientation="horizontal"
-                                    android:src="@drawable/ic_empty_star"
-                                    android:tag="5" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom|center_horizontal"
-                                    android:layout_marginBottom="@dimen/margin_5dp"
-                                    android:text="@string/wow_review"
-                                    android:textColor="@color/colorBlack"
-                                    android:textSize="@dimen/emoji_text_size"
-                                    android:textStyle="bold" />
-
-                            </androidx.cardview.widget.CardView>
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom|center_horizontal"
-                        android:layout_marginTop="@dimen/margin_5dp"
-                        android:layout_marginBottom="@dimen/margin_5dp"
-                        android:text="@string/feeling_sentecte"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="@dimen/rate_popup_subtitles_size"
-                        android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:layout_marginTop="@dimen/margin_5dp"
-                        android:layout_marginBottom="@dimen/margin_20dp"
-                        android:orientation="vertical">
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/recylcer_view_emojis"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="@dimen/margin_5dp"
-                            android:layout_marginBottom="@dimen/margin_5dp" />
-                    </LinearLayout>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/card_reviews"
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/shops_recycler_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="@color/colorGrayCardBackground"
-                        app:cardCornerRadius="4dp">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <ImageButton
-                                    android:id="@+id/reviews_image_button"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_marginEnd="5dp"
-                                    android:backgroundTint="@color/colorGrayCardBackground"
-                                    android:contentDescription="@string/imageview_adapter_text"
-                                    android:src="@drawable/chat" />
-
-                                <TextView
-                                    android:id="@+id/comments_number"
-                                    style="@style/TextAppearance.AppCompat.Title"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_vertical"
-                                    android:text="@string/numExample"
-                                    android:textSize="25sp" />
-                            </LinearLayout>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/accept_card_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_10dp"
-                        app:cardBackgroundColor="@color/colorGrayCardBackground"
-                        app:cardCornerRadius="4dp">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:id="@+id/accept_text_view"
-                                    style="@style/TextAppearance.AppCompat.Title"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_vertical"
-                                    android:text="@string/accept_upper_case"
-                                    android:textSize="25dp" />
-
-                            </LinearLayout>
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-                   -->
-
+                        android:layout_marginEnd="@dimen/margin_5dp"
+                        android:layout_marginBottom="@dimen/margin_5dp"/>
                 </LinearLayout>
+
             </LinearLayout>
         </ScrollView>
 
