--- a/app/src/main/res/layout/shop_list_item.xml
+++ b/app/src/main/res/layout/shop_list_item.xml
@@ -16,11 +16,40 @@
         android:background="@color/colorGrayCardBackground">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_item_image"
+            android:id="@+id/shop_logo"
             android:layout_width="120dp"
             android:layout_height="80dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/profile_photo"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/shop_price"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
+                android:text="10.59"/>
+
+            <TextView
+                android:id="@+id/currency"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
+                android:text="@string/euro_currency"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,24 +57,22 @@
             android:layout_gravity="center_vertical"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/user_item_name"
-                style="@style/TextAppearance.AppCompat.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:textSize="18sp"
-                android:text="Name of the user"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/user_item_email"
-                style="@style/TextAppearance.AppCompat.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:textSize="15sp"
-                android:text="Email of the user"/>
+                <ImageView
+                    android:id="@+id/go_shop_button"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_go_shop_button" />
+
+            </RelativeLayout>
+
+
         </LinearLayout>
+
 
     </LinearLayout>
 
