--- a/app/src/main/res/layout/fragment_genres.xml
+++ b/app/src/main/res/layout/fragment_genres.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FirstTimeForm.GenresFragment">
 
@@ -17,9 +18,9 @@
         app:strokeColor="#FF777777"
         app:strokeWidth="1dp"/>
 
-    <com.synnapps.carouselview.CirclePageIndicator
-        android:id="@+id/indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+
+
+
 
 </FrameLayout>
