--- a/app/src/main/res/layout/first_form_books_read.xml
+++ b/app/src/main/res/layout/first_form_books_read.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -62,12 +63,77 @@
             android:layout_marginTop="10dp"
             android:padding="4dp">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewReadBooks"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewReadBooks"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:id="@+id/next"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:paddingBottom="@dimen/margin_10dp"
+                    app:backgroundTint="@color/cardview_light_background"
+                    android:src="@drawable/ic_action_next"
+                    android:paddingEnd="@dimen/margin_10dp"/>
+
+            </RelativeLayout>
+
+
 
         </LinearLayout>
+
+        <!--<LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="13"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewReadBooks"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="5dp"/>
+
+                <LinearLayout
+                    android:layout_below="@+id/recyclerViewReadBooks"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"/>
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:id="@+id/next"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:paddingBottom="@dimen/margin_10dp"
+                    app:backgroundTint="@color/cardview_light_background"
+                    android:src="@drawable/ic_action_next"
+                    android:paddingEnd="@dimen/margin_10dp"/>
+
+            </RelativeLayout>
+
+
+
+
+
+
+
+
+
+        </LinearLayout>-->
 
     </LinearLayout>
 
