--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,12 @@
         <item name="colorAccent">@color/colorProgressBar</item>
     </style>
 
+    <style name="AppSearchView" parent="Widget.AppCompat.SearchView">
+        <item name="android:textColorPrimary">@color/colorPrimaryLight</item>
+        <item name="android:textColorHint">@color/colorAccent</item>
+        <item name="queryBackground">@color/colorPrimaryLight</item>
+        <item name="android:drawableEnd">@drawable/ic_search_button</item>
+        <item name="android:searchIcon">@null</item>
+    </style>
+
 </resources>
