--- a/app/src/main/res/layout/achievements_popup.xml
+++ b/app/src/main/res/layout/achievements_popup.xml
@@ -27,7 +27,7 @@
             android:text="@string/achievements_text"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/primaryText"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"/>
 
@@ -37,7 +37,9 @@
         android:id="@+id/recycler_view_achievements_popup"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"/>
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"/>
 
 
 </LinearLayout>
