--- a/app/src/main/res/layout/fragment_genres.xml
+++ b/app/src/main/res/layout/fragment_genres.xml
@@ -10,12 +10,13 @@
         android:id="@+id/carouselView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:fillColor="#FFFFFFFF"
-        app:pageColor="#00000000"
         app:radius="6dp"
         app:slideInterval="3000"
-        app:strokeColor="#FF777777"
         app:strokeWidth="1dp"/>
+        <!--app:fillColor="#FFFFFFFF"
+        app:pageColor="#00000000"-->
+        <!--app:strokeColor="#FF777777"-->
+
 
     <com.synnapps.carouselview.CirclePageIndicator
         android:id="@+id/indicator"
