--- a/app/src/main/res/layout/fragment_reading.xml
+++ b/app/src/main/res/layout/fragment_reading.xml
@@ -26,8 +26,8 @@
                     android:id="@+id/any_book_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_gravity="center_horizontal|center_vertical"
+                    android:orientation="vertical"
                     android:visibility="invisible">
 
                     <TextView
@@ -37,8 +37,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
-                        android:text="@string/any_book_yet"
-                        />
+                        android:text="@string/any_book_yet" />
 
                 </LinearLayout>
 
@@ -56,7 +55,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:text="@string/reading_text_title"
-                        android:textColor="@color/colorBlack"
+                        android:textColor="@color/primaryText"
                         android:textSize="25sp"
                         android:textStyle="bold" />
 
@@ -67,7 +66,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="5dp"
-                        android:background="@color/colorMark"
+                        android:background="@color/divider"
                         android:gravity="center_horizontal" />
 
                 </LinearLayout>
@@ -95,7 +94,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:text="@string/pending"
-                        android:textColor="@color/colorBlack"
+                        android:textColor="@color/primaryText"
                         android:textSize="25sp"
                         android:textStyle="bold" />
 
@@ -106,7 +105,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="5dp"
-                        android:background="@color/colorYellowSwipe"
+                        android:background="@color/divider"
                         android:gravity="center_horizontal" />
 
                 </LinearLayout>
@@ -134,7 +133,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="5dp"
                         android:layout_marginBottom="5dp"
-                        card_view:cardBackgroundColor="@color/colorGrayCardBackground"
+                        card_view:cardBackgroundColor="@color/colorPrimary"
                         card_view:cardCornerRadius="4dp">
 
                         <TextView
@@ -143,7 +142,7 @@
                             android:layout_gravity="center_vertical|center_horizontal"
                             android:gravity="center_horizontal|center_vertical"
                             android:text="@string/discover_link"
-                            android:textColor="@color/colorBlueLink" />
+                            android:textColor="@color/icons" />
                     </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
