--- a/app/src/main/res/layout/fragment_search_book.xml
+++ b/app/src/main/res/layout/fragment_search_book.xml
@@ -18,16 +18,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/cardview_light_background"
-            android:orientation="horizontal">
+            android:background="@color/colorPrimaryDark"
+            android:orientation="horizontal"
+            android:padding="@dimen/margin_15dp">
 
             <ImageView
                 android:id="@+id/go_back_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
                 android:src="@drawable/ic_go_back_button"
                 android:contentDescription="@string/imageview_adapter_text" />
 
@@ -35,12 +34,14 @@
                 android:id="@+id/search_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:iconifiedByDefault="false"
-                android:queryHint="@string/search_bar" />
+                android:searchIcon="@null"
+                android:queryHint="@string/search_bar"
+                android:layout_marginStart="15dp"
+                app:queryBackground="@color/colorPrimaryLight"
+                app:theme="@style/AppSearchView"/>
 
         </LinearLayout>
 
@@ -54,9 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:elevation="4dp"
-                android:minHeight="?attr/actionBarSize"
-                app:tabSelectedTextColor="@color/colorBlack"
-                app:tabTextColor="@color/colorMark"/>
+                android:minHeight="?attr/actionBarSize"/>
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/view_pager"
