--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="text_size">25dp</dimen>
     <dimen name="margin_5dp">5dp</dimen>
     <dimen name="margin_10dp">10dp</dimen>
+    <dimen name="margin_15dp">15dp</dimen>
     <dimen name="card_corner_radius">4dp</dimen>
     <dimen name="card_height">200dp</dimen>
     <dimen name="blank_layout">70dp</dimen>
