Change a design layout of the library

--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -3,18 +3,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".Library.LibraryFragment">
 
-    <SearchView
-        android:id="@+id/search_bar"
+    <LinearLayout
+        android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:iconifiedByDefault="false"
-        android:queryHint="@string/search_book" />
+        android:orientation="vertical"
+        android:background="@color/colorPrimaryDark">
+
+        <TextView
+            android:id="@+id/info_text"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_15dp"
+            android:text="My bookshelf"
+            android:textColor="@color/colorPrimaryLight"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/colorPrimary">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/TextAppearance.AppCompat.Body1"
+                android:text="Search book:"
+                android:textColor="@color/colorPrimaryLight"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/margin_15dp"/>
+
+            <SearchView
+                android:id="@+id/search_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:iconifiedByDefault="false"
+                android:searchIcon="@null"
+                android:queryHint="@string/search_book"
+                android:layout_marginEnd="@dimen/margin_15dp"
+                app:queryBackground="@color/colorPrimaryLight"
+                app:theme="@style/AppSearchView" />
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
