--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -18,7 +18,7 @@
         <shape android:shape="rectangle"  >
             <corners android:radius="6dp" />
             <stroke android:width="1dip" android:color="#F5EFEF" />
-            <gradient android:angle="-90" android:startColor="@color/colorPrimary" android:endColor="@color/colorAccent" />
+            <gradient android:angle="-90" android:startColor="@color/colorPrimary" android:endColor="@color/colorPrimary" />
         </shape>
     </item>
 </selector>
