--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="@dimen/margin_15dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="10dp"
                     android:text="@string/any_book_yet"
                     android:textColor="@color/primaryText" />
 
@@ -95,14 +95,14 @@
                 android:id="@+id/recyclerViewGenres"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:layout_marginStart="@dimen/margin_15dp"
-                android:layout_marginEnd="@dimen/margin_15dp"
-                android:layout_marginBottom="@dimen/margin_5dp" />
+                android:layout_marginEnd="@dimen/margin_15dp"/>
 
             <LinearLayout
                 android:id="@+id/discover_layout"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="55dp"
                 android:orientation="vertical"
                 android:layout_marginTop="@dimen/margin_10dp">
 
@@ -110,6 +110,7 @@
                     android:id="@+id/card_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
                     android:layout_marginStart="@dimen/margin_15dp"
                     android:layout_marginEnd="@dimen/margin_15dp"
                     android:layout_marginBottom="@dimen/margin_5dp"
@@ -134,6 +135,7 @@
                 android:orientation="vertical" />
 
         </LinearLayout>
+
     </ScrollView>
 
 </LinearLayout>
