--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -107,7 +107,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@color/colorPrimaryLight">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -302,16 +303,16 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="15dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/info_text_genre_preferences"
-                        style="@style/TextAppearance.AppCompat.Title"
+                        style="@style/TextAppearance.AppCompat.Body1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginEnd="15dp"
                         android:text="@string/genrePreferencesTitleProfile"
                         android:textColor="@color/primaryText"
                         android:textSize="25sp"
@@ -321,7 +322,9 @@
                         android:id="@+id/recycler_view_profile_genre_preferences"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:padding="3dp" />
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="@dimen/margin_15dp"
+                        android:layout_marginEnd="@dimen/margin_15dp" />
 
                 </LinearLayout>
 
@@ -329,16 +332,16 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="15dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/info_text_readed_books"
-                        style="@style/TextAppearance.AppCompat.Title"
+                        style="@style/TextAppearance.AppCompat.Body1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginEnd="15dp"
                         android:text="@string/readedBooksTitleProfile"
                         android:textColor="@color/primaryText"
                         android:textSize="25sp"
@@ -348,10 +351,9 @@
                         android:id="@+id/recycler_view_profile_favourite_books"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="10dp" />
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="@dimen/margin_15dp"
+                        android:layout_marginEnd="@dimen/margin_15dp" />
                 </LinearLayout>
 
                 <!-- Last achievements -->
@@ -359,15 +361,15 @@
                     android:id="@+id/linearLayoutAchievements"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="15dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/info_text_achievements"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginEnd="15dp"
                         android:text="@string/achievementsTitleProfile"
                         android:textColor="@color/primaryText"
                         android:textSize="25sp"
@@ -377,10 +379,9 @@
                         android:id="@+id/recycler_view_profile_achievements"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="10dp" />
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="15dp"/>
 
                 </LinearLayout>
 
@@ -389,25 +390,36 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="15dp"
                     android:background="@drawable/rounded_button"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
                     android:text="@string/upgrade_account_text"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                    app:icon="@drawable/upgrade"
+                    app:iconSize="24dp"
+                    app:iconPadding="@dimen/margin_15dp"/>
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/logOutButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="70dp"
                     android:background="@drawable/rounded_button"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
+                    android:layout_marginTop="@dimen/margin_15dp"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
                     android:text="@string/disconnect_text"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                    app:icon="@drawable/logout_sign"
+                    app:iconSize="24dp"
+                    app:iconPadding="@dimen/margin_15dp"/>
+
+                <LinearLayout
+                    android:id="@+id/empty_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:orientation="vertical" />
 
             </LinearLayout>
 
