--- a/app/src/main/res/layout/fragment_reading.xml
+++ b/app/src/main/res/layout/fragment_reading.xml
@@ -6,7 +6,27 @@
     android:orientation="vertical"
     tools:context=".Reading.ReadingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/colorPrimaryDark">
+
+        <TextView
+            android:id="@+id/info_text"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:text="My readings"
+            android:textColor="@color/colorPrimaryLight"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,12 +35,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginStart="@dimen/margin_15dp"
+            android:layout_marginEnd="@dimen/margin_15dp">
 
                 <LinearLayout
                     android:id="@+id/any_book_layout"
@@ -28,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:orientation="vertical"
-                    android:visibility="invisible">
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/any_book_text"
@@ -49,11 +66,10 @@
 
                     <TextView
                         android:id="@+id/reading_text"
-                        style="@style/TextAppearance.AppCompat.Title"
+                        style="@style/TextAppearance.AppCompat.Body1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="15dp"
                         android:text="@string/reading_text_title"
                         android:textColor="@color/primaryText"
                         android:textSize="25sp"
@@ -63,9 +79,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="5dp"
                         android:background="@color/divider"
                         android:gravity="center_horizontal" />
 
@@ -75,10 +89,7 @@
                     android:id="@+id/reading_books_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_marginTop="15dp"/>
 
                 <LinearLayout
                     android:id="@+id/pending_text_layout"
@@ -88,11 +99,10 @@
 
                     <TextView
                         android:id="@+id/pending_text"
-                        style="@style/TextAppearance.AppCompat.Title"
+                        style="@style/TextAppearance.AppCompat.Body1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="15dp"
                         android:text="@string/pending"
                         android:textColor="@color/primaryText"
                         android:textSize="25sp"
@@ -102,9 +112,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="5dp"
                         android:background="@color/divider"
                         android:gravity="center_horizontal" />
 
@@ -115,23 +123,19 @@
                     android:id="@+id/pending_books_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_marginTop="15dp"/>
 
                 <LinearLayout
                     android:id="@+id/discover_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="55dp"
                     android:orientation="vertical">
 
                     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/card_view"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
+                        android:layout_marginTop="15dp"
                         android:layout_marginBottom="5dp"
                         card_view:cardBackgroundColor="@color/colorPrimary"
                         card_view:cardCornerRadius="4dp">
@@ -154,8 +158,6 @@
                     android:orientation="vertical" />
 
             </LinearLayout>
-
-        </LinearLayout>
 
     </ScrollView>
 
