--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -4,21 +4,21 @@
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
             <stroke android:width="1dp" android:color="#F7F7F7" />
-            <gradient android:angle="-90" android:startColor="#ADADAD" android:endColor="#646464"  />
+            <gradient android:angle="-90" android:startColor="@color/colorPrimaryDark" android:endColor="@color/colorPrimaryDark"  />
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="3dp" />
             <stroke android:width="1dp" android:color="#FFFFFF" />
-            <solid android:color="#888888"/>
+            <solid android:color="@color/colorPrimaryDark"/>
         </shape>
     </item>
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="6dp" />
             <stroke android:width="1dip" android:color="#F5EFEF" />
-            <gradient android:angle="-90" android:startColor="@color/colorPrimary" android:endColor="@color/colorPrimary" />
+            <gradient android:angle="-90" android:startColor="@color/colorTransparent" android:endColor="@color/colorTransparent" />
         </shape>
     </item>
 </selector>
