--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,16 +22,28 @@
             android:background="@drawable/profile_banner">
 
             <ImageButton
+                android:id="@+id/buttonSettingsProfile"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:background="@color/colorTransparent"
+                android:padding="5dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/settings" />
+
+            <ImageButton
                 android:id="@+id/buttonAchievementsProfile"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/rounded_button"
-                android:padding="10dp"
+                android:layout_marginEnd="5dp"
+                android:background="@color/colorTransparent"
+                android:padding="5dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/award" />
+                android:src="@drawable/chevron" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -407,6 +419,7 @@
                     android:layout_gravity="center"
                     android:background="@drawable/rounded_button"
                     android:layout_marginTop="@dimen/margin_15dp"
+                    android:layout_marginBottom="@dimen/margin_15dp"
                     android:paddingStart="15dp"
                     android:paddingEnd="15dp"
                     android:text="@string/disconnect_text"
